# FFmpegPlayer

./: gradle.properties  gradlew  ndk-stack.bat  settings.gradle  systrace.bat
app/: build.gradle
app/src/androidTest/java/club/guozengjie/cplusplus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/club/guozengjie/cplusplus/: FFmpegCallback.kt  FFmpegPlayer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/club/guozengjie/cplusplus/: ExampleUnitTest.kt  HelloWorld.java
gradle/wrapper/: gradle-wrapper.properties
